# py-telegram-forwarder

./: .env.example  .gitignore  __main__.py  manage.py  pyproject.toml  settings.py
app/: __main__.py  entrypoints.py  repositories.py  services.py  settings.py
hooks/: pre-commit
tests/: test_services.py
