[tool.poetry]
name = "telegram_bot"
version = "0.1.0"
description = ""
authors = ["FFFarruh <fffarruh@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^13.7"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
black = "^21.9b0"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
