[tool.poetry]
name = "telegram_bot"
version = "0.1.0"
description = ""
authors = ["FFFarruh <fffarruh@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
flake8 = "^3.9.2"
Pyrogram = "^1.2.9"
psycopg = {extras = ["binary", "pool"], version = "^3.0.3"}
black = "^21.10b0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
